--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,21 @@
     <h1>Contact Us</h1>
     <p>You can reach us through the form below:</p>
 
-   
+   <section class="contact-form">
+  <h2>Contact Me</h2>
+ <form action="https://formspree.io/f/mgvzzpza" method="POST">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="message">Message:</label>
+  <textarea id="message" name="message" rows="5" required></textarea>
+
+  <button type="submit">Send Message</button>
+</form>
+</section>
   
 <footer>
   <p>&copy; 2025 Pastor Felix Itaman Uwamusi. All rights reserved.</p>
